# duckiebotto

./: CMakeLists.txt  README  package.xml  setup.py
src/: avoid.py  control.py  main.py  perception.py  rosnodes.py  state.py  web.py
src/static/: app.js
src/templates/: index.html
