<?xml version="1.0"?>
<package format="2">
  <name>duckiebot</name>
  <version>0.1.0</version>
  <description>Lane following and FastAPI UI for Duckiebot.</description>
  <maintainer email="noreply@duckietown.com">Duckiebot Auto</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>duckietown_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>duckietown_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
